# adventofcode-hs-2021

./: .gitignore  README.md  adventofcode.cabal  fetch.sh  mkday.rb
