cabal-version: 2.2
-- cabal 2.2 for common stanzas

name: adventofcode2021
version: 1.0
build-type: Simple

common flags
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -- as of GHC 9.0.1, enabling -Wmissing-exported-signatures disables stricter -Wmissing-signatures
    -- I want -Wmissing-signatures, so I will not enable -Wmissing-exported-signatures.
    -- They may have changed this in 9.2.1, so check back later.
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common bin
  hs-source-dirs: bin

library
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  build-depends:   base

library aocsearch
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Search
  build-depends:   base, containers

library aocsplit
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  build-depends:   base

executable 01_sonar_sweep
  import: bin, flags
  build-depends: base, adventofcode2021
  main-is:       01_sonar_sweep.hs

executable 02_dive
  import: bin, flags
  build-depends: base, adventofcode2021
  main-is:       02_dive.hs

executable 03_binary_diagnostic
  import: bin, flags
  build-depends: base, adventofcode2021
  main-is:       03_binary_diagnostic.hs

executable 04_giant_squid_bingo
  import: bin, flags
  build-depends: base, adventofcode2021, aocsplit, containers
  main-is:       04_giant_squid_bingo.hs

executable 05_hydrothermal_venture
  import: bin, flags
  build-depends: base, adventofcode2021, aocsplit
  main-is:       05_hydrothermal_venture.hs

executable 06_lanternfish
  import: bin, flags
  build-depends: base, adventofcode2021, aocsplit
  main-is:       06_lanternfish.hs

executable 07_crab_align
  import: bin, flags
  build-depends: base, adventofcode2021, aocsplit
  main-is:       07_crab_align.hs

executable 08_seven_segment_search
  import: bin, flags
  build-depends: base, adventofcode2021, aocsplit, array, containers
  main-is:       08_seven_segment_search.hs

executable 09_smoke_basin
  import: bin, flags
  build-depends: base, adventofcode2021, aocsearch, array
  main-is:       09_smoke_basin.hs

executable 10_syntax_scoring
  import: bin, flags
  build-depends: base, adventofcode2021
  main-is:       10_syntax_scoring.hs
